--- a/MoppApp/MoppApp/RecentContainersElements.xib
+++ b/MoppApp/MoppApp/RecentContainersElements.xib
@@ -1,16 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Roboto-Bold.ttf">
-            <string>Roboto-Bold</string>
-        </array>
         <array key="Roboto-Regular.ttf">
             <string>Roboto-Regular</string>
         </array>
@@ -22,23 +19,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="48"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <textField hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-OL-BjW" customClass="SearchTextField" customModule="MoppApp" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="20" width="375" height="28"/>
+                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="YC1-OL-BjW" customClass="SearchTextField" customModule="MoppApp" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="20" width="325" height="28"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="17"/>
                     <textInputTraits key="textInputTraits" returnKeyType="done"/>
                 </textField>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recent containers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yr2-Tq-KJ0" customClass="ScaledLabel" customModule="MoppApp" customModuleProvider="target">
-                    <rect key="frame" x="56" y="20" width="263" height="28"/>
-                    <fontDescription key="fontDescription" name="Roboto-Bold" family="Roboto" pointSize="21"/>
-                    <color key="textColor" red="0.015686274510000001" green="0.1176470588" blue="0.25882352939999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9Fx-J3-DpC">
-                    <rect key="frame" x="313" y="18" width="32" height="32"/>
+                    <rect key="frame" x="333" y="14" width="24" height="24"/>
                     <constraints>
-                        <constraint firstAttribute="width" secondItem="9Fx-J3-DpC" secondAttribute="height" multiplier="1:1" id="2Ca-N8-aup"/>
-                        <constraint firstAttribute="width" constant="32" id="flP-zC-d12"/>
+                        <constraint firstAttribute="width" constant="24" id="evD-4K-cFs"/>
+                        <constraint firstAttribute="height" constant="24" id="jai-rH-q41"/>
                     </constraints>
                     <state key="normal" image="searchContainers"/>
                     <connections>
@@ -49,25 +40,17 @@
             <viewLayoutGuide key="safeArea" id="zkY-Ou-pn7"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="5OY-Zo-39y"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerX" secondItem="zkY-Ou-pn7" secondAttribute="centerX" id="6bp-G2-OoW"/>
-                <constraint firstItem="zkY-Ou-pn7" firstAttribute="trailing" secondItem="YC1-OL-BjW" secondAttribute="trailing" id="9Hb-WD-2AF"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="D5d-Yq-1IK"/>
-                <constraint firstItem="YC1-OL-BjW" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" id="Gor-K3-uzx"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" constant="56" id="Hsm-Fj-Dt7"/>
-                <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="yr2-Tq-KJ0" secondAttribute="bottom" id="N2J-8E-miH"/>
-                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="yr2-Tq-KJ0" secondAttribute="trailing" constant="-6" id="T2D-6F-EzT"/>
-                <constraint firstItem="yr2-Tq-KJ0" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="aqY-rT-95h"/>
-                <constraint firstItem="YC1-OL-BjW" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="d6l-ez-9HY"/>
-                <constraint firstItem="9Fx-J3-DpC" firstAttribute="centerY" secondItem="zkY-Ou-pn7" secondAttribute="centerY" id="lPF-L4-EAk"/>
-                <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="yr2-Tq-KJ0" secondAttribute="bottom" id="ozi-Mw-fMY"/>
-                <constraint firstItem="zkY-Ou-pn7" firstAttribute="bottom" secondItem="YC1-OL-BjW" secondAttribute="bottom" id="xBU-Ws-iAR"/>
+                <constraint firstItem="9Fx-J3-DpC" firstAttribute="leading" secondItem="YC1-OL-BjW" secondAttribute="trailing" constant="8" symbolic="YES" id="Aaz-0l-3Ci"/>
+                <constraint firstItem="YC1-OL-BjW" firstAttribute="top" secondItem="zkY-Ou-pn7" secondAttribute="top" id="E2q-3h-Ynr"/>
+                <constraint firstItem="YC1-OL-BjW" firstAttribute="leading" secondItem="zkY-Ou-pn7" secondAttribute="leading" id="FhE-bo-cWu"/>
+                <constraint firstItem="9Fx-J3-DpC" firstAttribute="top" secondItem="Snb-e7-phM" secondAttribute="top" constant="14" id="m0k-pa-obO"/>
+                <constraint firstItem="YC1-OL-BjW" firstAttribute="bottom" secondItem="zkY-Ou-pn7" secondAttribute="bottom" id="p20-W0-hVV"/>
+                <constraint firstItem="zkY-Ou-pn7" firstAttribute="trailing" secondItem="9Fx-J3-DpC" secondAttribute="trailing" constant="18" id="uKZ-VG-u40"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="searchButton" destination="9Fx-J3-DpC" id="g3I-VC-uW7"/>
                 <outlet property="searchTextField" destination="YC1-OL-BjW" id="JaC-Lq-RgF"/>
-                <outlet property="titleLabel" destination="yr2-Tq-KJ0" id="3lB-x7-Ak0"/>
             </connections>
             <point key="canvasLocation" x="-138.40000000000001" y="-154.72263868065968"/>
         </view>
