--- a/MoppApp/MoppApp/Accessibility.storyboard
+++ b/MoppApp/MoppApp/Accessibility.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22154" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22130"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -27,45 +27,8 @@
                                 <rect key="frame" x="0.0" y="143" width="393" height="710"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wyB-vq-rWY" userLabel="Content View">
-                                        <rect key="frame" x="0.0" y="0.0" width="393" height="698.33333333333337"/>
-                                        <subviews>
-                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" scrollEnabled="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="jMg-Qh-WOG">
-                                                <rect key="frame" x="8" y="10" width="377" height="646.33333333333337"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                                <string key="text">RIA DigiDoc is designed to comply with the WCAG 2.1 AA accessibility guidelines. This means that the RIA DigiDoc application has been developed using the principles that the application should be usable by the blind and people with visual, mobility, and strength impairments.
-Accessibility can be improved by using built-in assistive tools on your smart device. You can find an overview of the main assistive tools below.
-Screen reader
-A screen reader is a program that converts the information on the screen of a smart device into a user-friendly output, for instance, into speech. In particular, it is a tool for the visually impaired.
-RIA DigiDoc has been built based on the principle that all types of visual content can be converted into user-friendly output. For example, the images are accompanied by textual descriptions. Furthermore, the arrangement and order of the structural elements consider the screen reader’s movement on the screen and allow the information to be consumed in a logical sequence.
-The most common smart device screen readers:
-VoiceOver (iOS, built in) https://support.apple.com/et-ee/guide/iphone/iph3e2e415f/ios
-Talkback (Android, built in) https://support.google.com/accessibility/android/answer/6007100
-
-Screen magnification and colour change
-If you have enough vision to read the text, you can use the built-in assistive tools to view the screen more comfortably. Assistive tools make it possible to change the size of text, the main font, and the colours of the user interface and enlarge the screen by using the screen magnifier.
-Tools to adjust screen colour and text size:
-iOS https://support.apple.com/et-ee/guide/iphone/iph3e2e1fb0/ios
-Android https://support.google.com/accessibility/android/answer/11183305?hl=en&amp;ref_topic=9079043
-
-Screen magnification tools:
-Zoom (iOS, built in) https://support.apple.com/et-ee/guide/iphone/iph3e2e367e/ios
-Magnification (Android, built in) https://support.google.com/accessibility/android/answer/6006949
-
-</string>
-                                                <color key="textColor" systemColor="labelColor"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                <dataDetectorType key="dataDetectorTypes" link="YES"/>
-                                            </textView>
-                                        </subviews>
+                                        <rect key="frame" x="0.0" y="0.0" width="393" height="690"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                        <constraints>
-                                            <constraint firstItem="jMg-Qh-WOG" firstAttribute="height" secondItem="wyB-vq-rWY" secondAttribute="height" multiplier="1.38449" priority="250" constant="-338.44505000000004" id="IG2-oI-BZG"/>
-                                            <constraint firstItem="jMg-Qh-WOG" firstAttribute="top" secondItem="wyB-vq-rWY" secondAttribute="top" constant="10" id="Nup-Pi-5R9"/>
-                                            <constraint firstAttribute="bottom" secondItem="jMg-Qh-WOG" secondAttribute="bottom" constant="42" id="SSb-j2-2dW"/>
-                                            <constraint firstItem="jMg-Qh-WOG" firstAttribute="leading" secondItem="wyB-vq-rWY" secondAttribute="leading" constant="8" id="k2W-9L-C4q"/>
-                                            <constraint firstAttribute="trailing" secondItem="jMg-Qh-WOG" secondAttribute="trailing" constant="8" id="pD4-rJ-kr0"/>
-                                        </constraints>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -118,7 +81,8 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
                     </view>
                     <connections>
                         <outlet property="closeButton" destination="ivr-aG-jmF" id="TmX-mb-QWN"/>
-                        <outlet property="textView" destination="jMg-Qh-WOG" id="oMR-wg-2vh"/>
+                        <outlet property="contentView" destination="wyB-vq-rWY" id="2db-Q6-sD3"/>
+                        <outlet property="scrollView" destination="n97-rK-R9x" id="M9P-nX-nld"/>
                         <outlet property="titleLabel" destination="bBp-20-pae" id="eep-xd-Zen"/>
                     </connections>
                 </viewController>
@@ -132,9 +96,6 @@ Magnification (Android, built in) https://support.google.com/accessibility/andro
         <namedColor name="MoppTitle">
             <color red="0.015686274509803921" green="0.11764705882352941" blue="0.25882352941176473" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
-        <systemColor name="labelColor">
-            <color red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
